--- a/package.json
+++ b/package.json
@@ -12,21 +12,26 @@
     "uuid": "3.3.2"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^6.0.0",
+    "@testing-library/react": "^10.0.2",
     "babel-eslint": "^10.0.3",
+    "cypress": "^4.4.0",
     "eslint": "^6.0.0",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "parcel-bundler": "^1.12.4",
+    "jest": "^25.3.0",
     "prettier": "^1.16.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
