--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "prettier": "^1.16.1"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.16.1",
+    "start-server-and-test": "^1.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --record --key dc86fe7b-24b5-40da-b8b6-e3dcc55304ae",
+    "testCI": "start-server-and-test start http-get://localhost:3000 cypress:run"
   },
   "eslintConfig": {
     "extends": "react-app"
